<resources>
    <string name="app_name">Hoxton Islah</string>

    <string name="prayer_times_frag_title">Prayer Times</string>

    <string name="next_jamaat_text">Next Jamaah</string>

    <string name="fajr_text">Fajr</string>
    <string name="dhohar_text">Dhohar</string>
    <string name="asr_text">Asr</string>
    <string name="maghrib_text">Maghrib</string>
    <string name="broadcast_next_prayer_text">Maghrib 08:30 pm</string>
    <string name="isha_text">Isha</string>
    <string name="jummah_text">Jumuah</string>

    <string name="admin_menu_item_text">Admin</string>
    <string name="settings_menu_item_text">Settings</string>
    <string name="fajr_salaat_name">Fajr</string>

    <string name="dummy_time">04:30am</string>
    <string name="dummy_gregorian_date">Thu 13 July 23</string>
    <string name="dummy_islamic_date">29 Dhul Hijjah 1444</string>
    <string name="today_text">Today</string>
    <string name="begin_text">Begin</string>
    <string name="jamaat_text">Jamaah</string>

    <string name="am">%s am</string>
    <string name="pm">%s pm</string>

    <string name="first_jumuah">1<sup>1&#x02E2;&#x1D57;</sup></string>
    <string name="second_jumuah">2<sup>2&#x207F;&#x1D48;</sup></string>
    <string name="cd_no_internet">No internet</string>

</resources>